# stats607-project1

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py  setup.cfg
Assignment_2_Kmeans/: 210266_assignment2_notebook.ipynb  Assignment-2-Kmeans.ipynb  ML4DS-210266-Assigment2.rar
artifacts/: scores.csv
baseline/Kmeans/Demo_2_Clustering/: Demo_2_Hierarchical_clustering.ipynb  Demo_2_Kmeans.ipynb
baseline/Kmeans/Demo_2_Clustering/__MACOSX/: ._Demo_2_Hierarchical_clustering.ipynb  ._Demo_2_Kmeans.ipynb
src/segmentation/: __init__.py  io.py  model.py  plots.py  preprocess.py  run_pipeline.py
tests/: test_e2e_pipeline.py  test_io.py  test_model.py  test_plots.py  test_preprocess.py
